src/app/examples/errors/error-tsx/error.tsx
'use client'

export default function ErrorMessage() {
  return (
    <div className="text-orange-700">
      There was an error with this page, caught by error.tsx so we can show this
      custom message.
    </div>
  )
}
